# recall-back

./: .gitignore  Dockerfile  README.md  compose.yaml  create_tables.py  deployment.md  pyproject.toml  reedme.md  requirements.txt  test.py  tmp.py
app/: __init__.py  auth.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  storage.py  utils.py
app/api/: __init__.py  cards.py  collections.py  dependencies.py  storage.py  train_records.py  users.py
app/auth/: config.py  utils.py
app/core/: __init__.py  auth.py  config.py  dependencies.py  minio.py  storage.py  types.py
app/crud/: __init__.py  card.py  card_collection.py  collection.py  storage.py  train_record.py  user.py
app/db/: database.py  models.py  unit_of_work.py
app/helpers/: __init__.py  auth.py  dependencies.py  ollama.py  training.py
app/repositories/: __init__.py  base.py  card.py  card_collection.py  collection.py  file.py  file_card.py  storage.py  train_record.py  user.py
app/routers/: cards.py  collections.py  storage.py  train_records.py  users.py
app/schemas/: __init__.py  base.py  card.py  collection.py  storage.py  train_record.py  user.py
app/services/: __init__.py  base.py  card.py  collection.py  (+3 more)
config/: minio-backend.env  minio-server.env  nginx.conf  ollama-setup.sh
deploy/: compose.yaml  compose_test.yaml  deploy.sh
docs/: api-reference.md  api_reference.md  architecture.md  configuration-environment-setup.md  configuration_environment_setup.md  core-domain-models.md  core_domain_models.md
sql_app/: crud.py  main.py  schemas.py  utils.py
(+9 files in other folders)
